fixed podcast image on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -412,6 +412,7 @@ footer .social ul li:not(:first-child) {
 }
 .messages .card img {
   width: clamp(310px, 100%, 400px);
+  height: clamp(310px, 100%, 400px);
 }
 .messages .card iframe {
   width: clamp(310px, 100%, 400px);
