--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -179,6 +179,7 @@
 
         img {
             width: clamp(310px, 100%, 400px);
+            height: clamp(310px, 100%, 400px);
         }
 
         iframe {
